# Graduation-Projects-Repo

./: .gitignore  main.py  pyproject.toml  setup_weights.sh
Docs_and_reports/Reports/: Datasets.docx
evaluation/: main.py  pyproject.toml
evaluation/scripts/: download_resources.py
evaluation/src/: __init__.py  evaluator.py  utils.py
results/: evaluation_metrics_20260201_214038.json
results/metrics/: evaluation_metrics_20260203_201211.json  evaluation_metrics_20260203_201643.json  evaluation_metrics_20260203_201913.json  evaluation_metrics_20260203_204517.json
results/predictions/: predictions_20260203_194921.json  predictions_20260203_200349.json
training/: main.py  pyproject.toml
training/scripts/: download_data.py
training/src/: IU_dataset_loader.py  main.py
