[project]
name = "training-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "deepspeed>=0.18.5",
    "einops>=0.8.2",
    "flake8>=7.3.0",
    "flash-attn==2.8.3",
    "hf-transfer>=0.1.9",
    "isort>=7.0.0",
    "kaggle>=1.8.3",
    "liger-kernel>=0.6.4",
    "numpy>=2.2.6",
    "packaging>=26.0",
    "pandas>=2.3.3",
    "parameterized>=0.9.0",
    "peft>=0.18.1",
    "qwen-vl-utils>=0.0.14",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.56.1",
    "trl==0.22.2",
    "vllm==0.10.1.1",
    "wandb>=0.24.1",
]
